objects/LiveAgentSession.object
<CustomObject>
    <fields>
        <fullName>Time_Idle__c</fullName>
        <formula>TEXT(FLOOR( TimeIdle /3600)) + &quot;:&quot; + TEXT( FLOOR(MOD( TimeIdle ,3600)/60)) + &quot;:&quot; +   TEXT(MOD(MOD( TimeIdle ,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Idle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Away__c</fullName>
        <formula>TEXT(FLOOR( TimeInAwayStatus /3600)) + &quot;:&quot; + TEXT( FLOOR(MOD( TimeInAwayStatus ,3600)/60)) + &quot;:&quot; +   TEXT(MOD(MOD( TimeInAwayStatus ,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent Away</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Online__c</fullName>
        <formula>TEXT(FLOOR( TimeInOnlineStatus /3600)) + &quot;:&quot; + TEXT( FLOOR(MOD( TimeInOnlineStatus ,3600)/60)) + &quot;:&quot; +   TEXT(MOD(MOD( TimeInOnlineStatus ,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent Online</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_in_Chats__c</fullName>
        <formula>TEXT(FLOOR( TimeInChats /3600)) + &quot;:&quot; + TEXT( FLOOR(MOD( TimeInChats ,3600)/60)) + &quot;:&quot; +   TEXT(MOD(MOD( TimeInChats ,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent in Chats</label>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>